2011-11-09 mmichaud <michael.michaud@free.fr>
    Changes from discussion held on 2011-11-04 and 2011-11-05
    * Move jpg images from com.vividsolutions.workbench.ui.images directory used
      by to FillPatternFactory to lib/ext/FillPatterns (to be used with 
      FillPatternFactory -user defined pattern - or from CadPlan extension)
    * Move batik jar from core to plus directory
    * Deactivate SaveImageAsSVGPlugIn if Batik is not found in the classpath
      (change in PlugInManager class)

2011-11-09
    * Fixed EditSelectedFeaturePlugIn : the geometry change made in the
      WKT editor had no effect on the geometry after validation.

2011-11-08 mmichaud <michael.michaud@free.fr>
    * Fixed persistence of OpenProject / SaveProjectAs [ID 3434161]
      org.openjump.core.ui.plugin.file.open.SelectProjectFilesPanel
      org.openjump.core.ui.plugin.file.open.OpenProjectWizard
      com.vividsolutions.jump.workbench.ui.plugin.SaveProjectAsPlugIn
    * Internationalization of PasteItemsPlugIn and PasteLayerPlugIn

2011-11-07 mmichaud <michael.michaud@free.fr>
    * Fixed AutoAssignPlugin [ID 3434648] and changed slightly its semantic
      unparsable number returns null instead of 0 for Integer or Double type

2011-11-06 sstein <sstein@geo.uzh.ch>
    * Fixed the SaveDatasetAs bug for MacOSX [ID 3428076].
      Now the input is accepted and, hence, a file is written.
      Testing fix on Windows on 7.Nov.2011 was positive. So I removed the 
      MacOSX specific function call for "SaveDatasetAsFile" that was used 
      as work around.
      Note, the solution itself is done by replacing Non-OSX workaround code
      for the Java bug 4528663 in FileDataSourceQueryChooser only. Changes in 
      other classes were for testing and code readability.
      
2011-11-05 sstein <sstein@geo.uzh.ch>
    * Added icons by Peppe for the following functions: 
      EditSelectedFeaturePlugIn, DeleteSelectedItemsPlugIN, 